Remove fixed Thread executor